--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,7 @@ jobs:
 
       # Create a new release: create a tag, then 'git push origin <tagname>', wait for it to build
       - name: Create a new GitHub release if a new tag is pushed
-        uses: softprops/action-gh-release@b28d815 #@v1
+        uses: softprops/action-gh-release@v1
         with:
           files: |
             C:\builtfiles\dnSpy-netframework.zip
